# chess-game

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  TODOS.md  positions.txt
crates/chess_engine/: Cargo.toml  README.md
crates/chess_engine/benches/: evaluate.rs
crates/chess_engine/src/: all_legal_moves.rs  eval.rs  lib.rs  old.rs  part_vec.rs
crates/chess_engine/src/examples/: dev.rs
crates/chess_game/: Cargo.toml  README.md  TODOS.md  fen.fish  test.fish
crates/chess_game/benches/: check_outcome.rs  try_make_move.rs
crates/chess_game/src/: game.rs  lib.rs  piece.rs  ply.rs  position.rs  tmp.rs
crates/chess_game/src/game/: blockable_pieces.rs  board.rs  pgn.rs  repetition.rs  zobrist.rs
crates/chess_game/src/game/zobrist/: values.rs  zobrist.py
crates/chess_game/tests/: driver.rs
crates/chess_game/tests/cases/: bot_v_chess_com_1686858750  chess.com_80423419313  lichess.org_iamAsNrO  lichess.org_zhaXiDyo
crates/engine_quality/: Cargo.toml  missed_checkmates.txt
crates/engine_quality/src/: main.rs
src/: game.rs  graphics.rs  headless.rs  lib.rs  main.rs  ply.rs  position.rs  render.rs
src/game/: blockable_pieces.rs  board.rs  render.rs
