[package]
name = "chess-game"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
anyhow = "1.0.71"
catppuccin = "1.2.1"
nom = "7.1.3"
itertools = "0.10.5"
either = "1.8.1"
tinyvec = "1.6.0"
thiserror = "1.0.40"
sdl2 = {version="0.35.2", features = ["image"]}

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.release]
debug = true
