[package]
name = "chess"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["crates/chess_game"]

[dependencies]
anyhow = "1.0.71"
catppuccin = "1.2.1"
itertools = "0.10.5"
thiserror = "1.0.40"
sdl2 = {version="0.35.2", features = ["image"]}
chess_game = {path = "./crates/chess_game/"}

[dev-dependencies]
pretty_assertions = "1.3.0"

[profile.release]
debug = true
