[package]
name = "chess_game"
version = "0.1.0"
edition = "2021"
authors = ["Conradin Laux <conradin.laux@gmail.com>"]
description = "very basic chess implementation"
repository = "https://github.com/HSMF/chess-game/tree/main/crates/chess_game"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = { version = "0.2.86" }
console_error_panic_hook = { version = "0.1.7", optional = true }



[dependencies]
nom = "7.1.3"
itertools = "0.10.5"
either = "1.8.1"
tinyvec = "1.6.0"
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
