[package]
name = "chess_game"
version = "0.1.0"
edition = "2021"
authors = ["Conradin Laux <conradin.laux@gmail.com>"]
description = "very basic chess implementation"
repository = "https://github.com/HSMF/chess-game/tree/main/crates/chess_game"
license = "MIT"

[[bin]]
name = "tmp"
path = "src/tmp.rs"

[dependencies]
nom = "7.1.3"
itertools = "0.10.5"
either = "1.8.1"
tinyvec = { version = "1.6.0", features = ["alloc"] }
thiserror = "1.0.40"

[dev-dependencies]
pretty_assertions = "1.3.0"
criterion = "0.5.1"

[[bench]]
name = "try_make_move"
harness = false

[[bench]]
name = "check_outcome"
harness = false
