[package]
name = "engine_quality"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
chess_engine = { path = "../chess_engine/" }
chess_game = { path = "../chess_game/" }
clap = { version = "4.3.9", features = ["derive"] }
itertools = "0.11.0"
regex = "1.8.4"
tinyvec = "1.6.0"
